# AtliQ-TShirts-LLM-powered-MySQL-Q-A-App

./: README.md  langchain_helper.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
