[project]
name = "altiq"
version = "0.1.0"
description = ""
authors = [
    {name = "disha",email = "dishagopani05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-google-genai (>=2.1.2,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "chromadb (>=1.0.4,<2.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "altiq", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
